# Pangu-Nebula

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  SECURITY.md  _fix_settings.ps1  docker-compose.yml  launch.py  pangu-nebula-linux.spec  pangu-nebula-mac.spec  pangu-nebula.spec  pyproject.toml  pytest.ini  requirements-build.txt  requirements.txt
.github/workflows/: ci-cross-platform.yml  ci.yml  pages.yml  release.yml  security.yml  tauri-release.yml
docs/: comparative-analysis.md  deployment-guide.md  design.md  fix-iteration-plan.md  fusion-report.md  nomifun-analysis.md  rust-migration-analysis.md  skill-ecosystem-mcp-marketplace-design.md  soc2-compliance.md  spec.html  spec.md  tasks.md  tauri-migration-evaluation.md  tracker.html  troubleshooting.md  v2.1.0-phase0-checklist.md  v2.1.0-phase0-spec.md  v2.1.0-phase0-tasks.md  v2.2.0-architecture-plan.md
docs/superpowers/plans/: 2026-07-16-kb-cu-implementation.md
docs/superpowers/specs/: 2026-07-16-kb-cu-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: app.tsx  main.tsx
frontend/src/components/: ApprovalBanner.tsx  AutoWorkPanel.tsx  ChatPanel.tsx  DAGCanvas.tsx  Dashboard.tsx  DegradedUI.tsx  DiffViewer.tsx  ErrorBoundary.tsx  ExternalAgentPanel.tsx  KnowledgePanel.tsx  MascotAssistant.tsx  MemoryGraph.tsx  MemoryInspector.tsx  NodeConfigPanel.tsx  OnboardingWizard.tsx  PersonaManager.tsx  Settings.tsx  Sidebar.tsx  SkillMarketplace.tsx  StatusBar.tsx  SwarmProgress.tsx  TerminalPanel.tsx  Titlebar.tsx  UpdateChecker.tsx  WikiBrowser.tsx  WikiReviewInbox.tsx
frontend/src/lib/: api.ts  logger.ts  store.tsx  types.ts
frontend/src/styles/: variables.css
pangu_memory_sdk/: __init__.py  crdt.py  pyproject.toml
rust/browser_use/: Cargo.toml
rust/browser_use/src/: aria.rs  cdp.rs  lib.rs
rust/computer_use/: Cargo.toml
rust/computer_use/src/: a11y.rs  lib.rs  ocr.rs  som.rs
scripts/: __init__.py  build.py  build_sidecar.py  dev.py  gen_latest_json.py  gen_sidecar_hash.py  sync_version.py
server/: alembic.ini  config.py  config_kb_cu.py  main.py  window.py
server/alembic/: env.py
server/alembic/versions/: 001_init.sql
server/api/: acp.py  acp_adapters.py  audit.py  autowork.py  browser.py  channel.py  chat.py  cu.py  dag.py  deps.py  did.py  distiller.py  events.py  evolution.py  graph.py  health.py  idmm.py  kb.py  loop.py  mcp.py  memory.py  models.py  models_channel.py  models_mcp.py  models_scheduler.py  models_sync.py  multimodal.py  oauth.py  os_sense.py  persona.py  providers.py  rag.py  scheduler.py  security.py  skill_market.py  skills.py  swarm.py  sync.py  sync_device.py  terminal.py  (+4 more)
server/core/: __init__.py  event_bus.py
server/core/evolution/: __init__.py
server/core/memory/: __init__.py
server/core/persona/: __init__.py
server/core/providers/: __init__.py
server/core/skills/: __init__.py
server/core/swarm/: __init__.py
server/core/wiki/: __init__.py
server/cu/: knowledge_bridge.py  mcp_tools.py  planner.py  verifier.py
server/cu/executor/: action_types.py  runner.py
server/cu/safety/: audit_log.py  emergency_stop.py  rollback.py
server/cu/sandbox/: fs_sandbox.py
server/db/: acp_models.py  autowork_models.py  connection.py  cu_models.py  dag_models.py  engine.py  indexes.sql  kb_models.py  migrations.py  models.py  orm.py  swarm_models.py  wiki_review_models.py
server/kb/: service.py
server/providers/: __init__.py  anthropic_provider.py  base.py  config_store.py  deepseek_provider.py  gemini_provider.py  kimi_provider.py  openai_provider.py  openrouter_provider.py  qwen_provider.py  registry.py  zhipu_provider.py
server/sdk/: __init__.py  blackhole.py  sponge.py  store.py  types.py
server/services/: acl_service.py  acp_service.py  active_state.py  asr_service.py  audit_logger.py  autowork_service.py  blackhole_engine.py  browser_service.py  browser_use_rust.py  budget_controller.py  channel_router.py  chat_service.py  clipboard_watcher.py  command_guard.py  community_registry.py  compact.py  computer_use_rust.py  crdt_service.py  dag_service.py  delegation_guard.py  did_service.py  dingtalk_channel.py  discord_channel.py  distiller.py  dlp_engine.py  evolution_engine.py  feishu_channel.py  file_watcher.py  graph_executor.py  health_check.py  heartbeat_service.py  idmm.py  injection_guard.py  key_rotation.py  keychain.py  knowledge_service.py  linkage_coordinator.py  loop_engine.py  marketplace.py  mcp_client.py  (+42 more)
server/skills/: code-review.md  json-formatter.py.md  summarizer.md
server/tools/: browser_tools.py  builtin_tools.py  code_tool.py  command_tool.py  computer_tools.py  registry.py
src-tauri/: Cargo.toml  audit.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: integrity.rs  ipc.rs  lib.rs  main.rs  sidecar.rs  supervisor.rs  tray.rs  updater.rs
tests/: conftest.py  test_acp_adapters.py  test_acp_swarm.py  test_async_io_and_truncation.py  test_async_optimization.py  test_autowork.py  test_blackhole.py  test_browser_lock_and_finish_reason.py  test_chat_evolution_regression.py  test_cicd.py  test_code_quality_fixes.py  test_compact.py  test_config_fix.py  test_cross_platform.py  test_cu_config_dedup.py  test_cu_executor.py  test_cu_knowledge_bridge.py  test_dag.py  test_dag_approval.py  test_e2e_cu.py  test_e2e_kb.py  test_fts5_search.py  test_graph_n1_query.py  test_graph_relations.py  test_health_ready.py  test_idmm.py  test_injection_and_audit.py  test_input_limits.py  test_ipc_adapter.py  test_kb_indexing.py  test_lance_store_injection.py  test_m1_api.py  test_m1_frontmatter.py  test_m1_parsers.py  test_m1_repo.py  test_m2_api.py  test_m2_hybrid.py  test_m2_vectorstore.py  test_m3_api.py  test_m3_kuzu.py  (+59 more)
tests/benchmark/: conftest.py  data_generator.py  generate_report.py  metrics.py  test_api_performance.py  test_blackhole_loss.py  test_l3_accuracy.py  test_l5_metacognition.py  test_sponge_noise.py
tests/e2e/: test_frontend_build.py  test_smoke.py
(+34 files in other folders)
