[project]
name = "pangu-nebula"
version = "0.1.0"
description = "Pangu Nebula AI Agent Platform"
authors = [{name = "Developer"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "aiosqlite",
    "alembic",
    "httpx",
    "pywebview",
    "cryptography",
    "pydantic-settings",
    "pydantic",
    "python-dotenv",
]

[project.scripts]
pangu-nebula = "launch:main"
pangu-dev = "scripts.dev:main"
pangu-build = "scripts.build:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
