[project]
name = "pangu-nebula"
version = "2.1.8"
description = "Pangu Nebula AI Agent Platform"
authors = [{name = "Developer"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "httpx>=0.27.0",
    "pywebview>=6.0.0",
    "cryptography>=43.0.0",
    "base58>=2.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
]

[project.scripts]
pangu-nebula = "launch:main"
pangu-dev = "scripts.dev:main"
pangu-build = "scripts.build:main"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false
files = ["server/services", "server/db", "server/api", "server/providers", "server/tools"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"