[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pangu-memory-sdk"
version = "0.1.0"
description = "Pangu Memory SDK — 6-layer cognitive memory with sponge/blackhole engines and CRDT sync"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
packages = ["pangu_memory_sdk"]
