[package]
name = "pangu-nebula"
version = "2.1.14"
description = "Pangu Nebula - AI Agent Desktop Platform (Tauri 2 shell)"
authors = ["Pangu Nebula Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "pangu_nebula_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Sidecar IPC: HTTP requests proxy to Python FastAPI
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
# keepawake: prevent system sleep during agent tasks (macOS/Windows/Linux)
keepawake = "0.6"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
